--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.nicestart">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -12,26 +15,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Nicestart."
         tools:targetApi="31">
-        <activity
-            android:name=".Login"
-            android:exported="true">
 
+        <activity
+            android:name=".Splash"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
+            android:name=".Login"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".Signup"
-            android:exported = "true"
+            android:exported="true"
             android:parentActivityName=".Login"
             android:theme="@style/ActionTheme">
         </activity>
-
-
-
     </application>
 
 </manifest>
